--- a/analyzetemplate.yaml
+++ b/analyzetemplate.yaml
@@ -6,12 +6,10 @@ spec:
   metrics:
   - name: success-rate
     successCondition: result[0] >= 0.95
-    initialDelay: 10s
-    interval: 20s
-    count: 5
+    failureLimit: 1
     provider:
       prometheus:
         address: "http://prometheus.istio-system:9090"
         query: |
-           sum(irate(istio_requests_total{reporter="source",destination_service=~"rollouts-demo-canary.rollout-demo.svc.cluster.local",response_code!~"5.*"}[40s])) /
-           sum(irate(istio_requests_total{reporter="source",destination_service=~"rollouts-demo-canary.rollout-demo.svc.cluster.local"}[40s]))
+           sum(irate(istio_requests_total{reporter="source",destination_service=~"rollouts-demo-canary.rollout-demo.svc.cluster.local",response_code!~"5.*"}[5s])) /
+           sum(irate(istio_requests_total{reporter="source",destination_service=~"rollouts-demo-canary.rollout-demo.svc.cluster.local"}[5s]))
