--- a/rollout.yaml
+++ b/rollout.yaml
@@ -20,16 +20,16 @@ spec:
       steps:
       - setWeight: 20
       - pause:
-          duration: 40s
+          duration: 20s
       - setWeight: 40
       - pause:
-          duration: 40s
+          duration: 20s
       - setWeight: 60
       - pause:
-          duration: 40s
+          duration: 20s
       - setWeight: 80
       - pause:
-          duration: 40s
+          duration: 20s
       - analysis:
           templates:
           - templateName: success-rate
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
       - name: rollouts-demo
-        image: argoproj/rollouts-demo:yellow
+        image: argoproj/rollouts-demo:blue
         ports:
         - name: http
           containerPort: 8080
